@@ -19,7 +19,7 @@
 </style>
 
 </head>
-<body onload="rcube_init_mail_ui()">
+<body>
 
 <roundcube:include file="/includes/taskbar.html" />
 <roundcube:include file="/includes/header.html" />
@@ -82,6 +82,10 @@
     <roundcube:container name="filteroptions" id="filtermenu" />
   </ul>
 </div>
+
+<script type="text/javascript">
+rcube_init_mail_ui();
+</script>
 
 </body>
 </html>
