@@ -16,10 +16,10 @@
 </style>
 </head>
 <roundcube:if condition="env:extwin" />
-<body class="extwin" onload="rcube_init_mail_ui()">
+<body class="extwin">
 <roundcube:object name="message" id="message" />
 <roundcube:else />
-<body onload="rcube_init_mail_ui()">
+<body>
 <roundcube:include file="/includes/taskbar.html" />
 <roundcube:include file="/includes/header.html" />
 <roundcube:endif />
@@ -196,6 +196,10 @@
 </form>
 
 <roundcube:object name="composeAttachmentForm" id="attachment-form" attachmentFieldSize="40" class="popupmenu" />
+
+<script type="text/javascript">
+rcube_init_mail_ui();
+</script>
 
 </body>
 </html>
