@@ -27,7 +27,7 @@
 </style>
 </head>
 
-<body onload="rcube_init_mail_ui()">
+<body>
 
 <roundcube:include file="/includes/taskbar.html" />
 <roundcube:include file="/includes/header.html" />
@@ -59,6 +59,10 @@
 <script type="text/javascript">
     var mailviewsplitv = new rcube_splitter({id:'mailviewsplitterv', p1: 'mailboxlist-container', p2: 'messageframe', orientation: 'v', relative: true, start: 165});
     rcmail.add_onload('mailviewsplitv.init()');
+</script>
+
+<script type="text/javascript">
+rcube_init_mail_ui();
 </script>
 
 </body>
