@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix folder names truncation in Classic skin (#1489220)
 - Fix parsing of square bracket characters in IMAP response strings (#1489223)
 - Don't clear References and in-Reply-To when a message is "edited as new" (#1489216)
 - Make possible to disable some (broken) IMAP extensions with imap_disable_caps option (#1489184)
